Remove animation hrottling that we don't want.  Bug 386269, patch by tor and Alfred Kayser <alfredkayser@nl.ibm.com>, r=pavlov, sr=tor